--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
     "class-variance-authority": "^0.7.1",
@@ -21,8 +23,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "sanity": "^3.69.0",
     "styled-components": "^6.1.14",
+    "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
